# GuardWeave

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  after_verify.py  attack_strategies.json  before_verify.py  defense1.jsonl  defense10.jsonl  defense2.jsonl  defense3.jsonl  defense4.jsonl  defense5.jsonl  defense6.jsonl  defense7.jsonl  defense8.jsonl  defense9.jsonl  hard_benign_eval.py  hard_benign_eval_logs.jsonl  hard_benign_strategies.json  jailbreak_attack.py  jailbreak_attack_with_policy_defense.py  jailbreak_exfiltration_logs.jsonl  policy_risk_defense.py  policy_risk_defense_annoted.py  policy_risk_defense_gemini_clean.py  policy_risk_defense_old.py  pyproject.toml  qwen10.jsonl  qwen5.jsonl  qwen6.jsonl  qwen7.jsonl  qwen8.jsonl  score_and_trend_smoketest.py
.github/: pull_request_template.md
benchmarks/: qwen_attack_guardweave_experiment.py  render_strategy_report.py  render_strategy_suite_report.py  run_sample_benchmark.py  run_strategy_suite.py  strategy_driven_guardweave_experiment.py
docs/: BENCHMARK_REPRO.md  CONFIGURATION.md  JUDGE_BENCHMARK_COMPARISON.md  JUDGE_BENCHMARK_COMPARISON.zh-CN.md  LAUNCH_POSTS.md  LAUNCH_POSTS.zh-CN.md  PERFORMANCE.md  PERFORMANCE.zh-CN.md  THREAT_MODEL.md  THREAT_MODEL.zh-CN.md
examples/: example_system_prompt.txt  fastapi_middleware.py  integration_examples.py  local_judge_setup.py  openai_compatible_chat.py  quickstart_heuristic_only.py  rag_wrapper.py  train_local_judge.py
first demo/: TinyLlama.jsonl  attack_strategies.json  baseline_attack_rag.py  (+13 more)
(+39 files in other folders)
